package com.agents.model;

public enum TransactionType {
    VENTE,
    ACHAT
}
