package com.agents.observer;

import com.agents.model.Evenement;

public interface Observer {
    void update(Evenement e);
}
